--- a/app/views/admin/games.jet.html
+++ b/app/views/admin/games.jet.html
@@ -1,1 +1,18 @@
 <h1>Games</h1>
+
+<table>
+    <thead>
+        <tr>
+            <th>Developer Slug</th>
+            <th>Game Slug</th>
+        </tr>
+    </thead>
+    {{ range Games }}
+    <tr>
+        <td><a href="/admin/developers/{{ .DeveloperSlug }}">{{ .DeveloperSlug }}</a></td>
+        <td>
+            <a href="/admin/developers/{{ .DeveloperSlug }}/games/{{ .Slug }}">{{ .Slug }}</a>
+        </td>
+    </tr>
+    {{ end }}
+</table>
