--- a/app/views/admin/achievements.jet.html
+++ b/app/views/admin/achievements.jet.html
@@ -1,1 +1,20 @@
 <h1>Achievements</h1>
+
+<table>
+    <thead>
+    <tr>
+        <th>Slug</th>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Progress Requirement</th>
+    </tr>
+    </thead>
+    {{ range Achievements }}
+    <tr>
+        <td><a href="/admin/developers/{{ .DeveloperSlug }}/games/{{ .GameSlug }}/achievements/{{ .Slug }}">{{ .Slug }}</a></td>
+        <td>{{ .Name }}</td>
+        <td>{{ .Description }}</td>
+        <td>{{ .ProgressRequirement }}</td>
+    </tr>
+    {{ end }}
+</table>
