--- a/app/views/admin/users.jet.html
+++ b/app/views/admin/users.jet.html
@@ -9,7 +9,7 @@
     </thead>
     {{ range Users }}
         <tr>
-            <td>{{ .Name }}</td>
+            <td>{{ .DisplayName.String }}</td>
             <td>
                 <a href="/admin/users/{{ .Slug }}">{{ .Slug }}</a>
             </td>
