--- a/app/views/admin/developer.jet.html
+++ b/app/views/admin/developer.jet.html
@@ -2,22 +2,22 @@
     <h1>Developer Not Found</h1>
     <h2>There is no developer with the slug '{{ PathSlug }}'</h2>
 {{ else }}
-    <h1>Developer: {{ Developer.Slug }}</h1>
+    <h1>Developer: {{ Model.Developer.Slug }}</h1>
 
     <h2>Members</h2>
     <table>
-        {{ range Developer.Members }}
+        {{ range Model.Members }}
             <tr>
-                <td><a href="/admin/users/{{ .Slug }}">{{ .Slug }}</a></td>
+                <td><a href="/admin/users/{{ . }}">{{ . }}</a></td>
             </tr>
         {{ end }}
     </table>
 
     <h2>Games</h2>
     <table>
-        {{ range Developer.Games }}
+        {{ range Model.Games }}
         <tr>
-            <td><a href="/admin/developers/{{ Developer.Slug }}/games/{{ .Slug }}">{{ .Slug }}</a></td>
+            <td><a href="/admin/developers/{{ Model.Developer.Slug }}/games/{{ . }}">{{ . }}</a></td>
         </tr>
         {{ end }}
     </table>
