--- a/app/views/admin/user.jet.html
+++ b/app/views/admin/user.jet.html
@@ -2,7 +2,7 @@
     <h1>User Not Found</h1>
     <h2>There is no user with the slug '{{ PathSlug }}'</h2>
 {{ else }}
-    <h1>User: {{ User.Slug }}</h1>
+    <h1>User: {{ Model.User.Slug }}</h1>
 
 
     <h2>Display Names</h2>
@@ -14,9 +14,9 @@
             <th>Deleted At</th>
         </tr>
         </thead>
-        {{ range User.DisplayNames }}
+        {{ range Model.DisplayNames }}
         <tr>
-            <td>{{ .Name }}</td>
+            <td>{{ .DisplayName }}</td>
             <td>{{ .CreatedAt }}</td>
             <td>
                 {{ if .DeletedAt.Valid }}
@@ -26,32 +26,34 @@
         </tr>
         {{ end }}
     </table>
-
 
     <h2>Emails</h2>
     <table>
         <thead>
         <tr>
-            <th>Name</th>
-            <th>Slug</th>
+            <th>Email</th>
             <th>Created At</th>
             <th>Deleted At</th>
+            <th>Confirmed At</th>
         </tr>
         </thead>
-        {{ range User.Emails }}
+        {{ range Model.Emails }}
         <tr>
-            <td>{{ .Name }}</td>
-            <td>{{ .Slug }}</td>
+            <td>{{ .Email }}</td>
             <td>{{ .CreatedAt }}</td>
             <td>
                 {{ if .DeletedAt.Valid }}
                     {{ .DeletedAt.Time }}
                 {{ end }}
             </td>
+            <td>
+                {{ if .ConfirmedAt.Valid }}
+                    {{ .ConfirmedAt.Time }}
+                {{ end }}
+            </td>
         </tr>
         {{ end }}
     </table>
-
 
     <h2>Developers</h2>
     <table>
@@ -63,7 +65,7 @@
             <th>Deleted At</th>
         </tr>
         </thead>
-        {{ range User.Developers }}
+        {{ range Model.Developers }}
         <tr>
             <td><!-- TODO --></td>
             <td>{{ .Slug }}</td>
