--- a/app/views/admin/home.jet.html
+++ b/app/views/admin/home.jet.html
@@ -1,1 +1,8 @@
-<h1>openstats Admin Dashboard</h1>
+<h1>Admin Dashboard</h1>
+
+<p>
+    Welcome to the openstats Admin Dashboard. From here you may perform admin operations on Users, Developers, Games,
+    and Achievements.
+    <br/>
+    To start, click one of the links on the left.
+</p>
