--- a/app/views/admin/users.jet.html
+++ b/app/views/admin/users.jet.html
@@ -1,18 +1,38 @@
-<h1>Users</h1>
-
-<table>
+<h2>Users</h2>
+<hr>
+<div class="mb-3">
+    <button type="button" class="btn btn-secondary m-1">New User</button>
+    <button type="button" class="btn btn-secondary m-1">Delete User</button>
+</div>
+<table class="table table-striped table-hover table-responsive">
     <thead>
         <tr>
-            <th>Display Name</th>
-            <th>Slug</th>
+            <th scope="col">Select</th>
+            <th scope="col">Slug</th>
+            <th scope="col">Display Name</th>
+            <th scope="col">Created At</th>
+            <th scope="col">Updated At</th>
+            <th scope="col">Deleted At</th>
         </tr>
     </thead>
-    {{ range Users }}
+    <tbody>
+        {{ range Users }}
         <tr>
-            <td>{{ .DisplayName.String }}</td>
-            <td>
+            <td class="text-center">
+                <input type="checkbox" class="form-check-input form-control d-inline-block" value="" id="checkUser">
+            </td>
+            <th scope="row">
                 <a href="/admin/users/{{ .Slug }}">{{ .Slug }}</a>
+            </th>
+            <td>{{ .DisplayName.String }}</td>
+            <td>{{ .CreatedAt }}</td>
+            <td>{{ .UpdatedAt }}</td>
+            <td>
+                {{ if .DeletedAt.Valid }}
+                    {{ .DeletedAt.Time }}
+                {{ end }}
             </td>
         </tr>
-    {{ end }}
+        {{ end }}
+    </tbody>
 </table>
