--- a/app/views/admin/developer.jet.html
+++ b/app/views/admin/developer.jet.html
@@ -4,22 +4,73 @@
 {{ else }}
     <h1>Developer: {{ Model.Developer.Slug }}</h1>
 
-    <h2>Members</h2>
-    <table>
+    <h4>Members</h4>
+    <table class="table table-striped table-hover table-responsive">
+        <thead>
+        <tr>
+            <th></th>
+            <th scope="col">Slug</th>
+            <th scope="col">Display Name</th>
+            <th scope="col">Joined At</th>
+            <th scope="col">Left At</th>
+        </tr>
+        </thead>
+        <tbody>
         {{ range Model.Members }}
             <tr>
-                <td><a href="/admin/users/{{ . }}">{{ . }}</a></td>
+                <td class="text-center">
+                    <a type="button" class="btn btn-secondary m-1" href="/admin/users/{{ .Slug }}">
+                        <i class="bi bi-person"></i>
+                    </a>
+                    <a type="button" class="btn btn-secondary m-1"><i class="bi bi-trash"></i></a>
+                </td>
+                <th scope="row">{{ .Slug }}</th>
+                <td>
+                    {{ if .DisplayName.Valid }}
+                        {{ .DisplayName.String }}
+                    {{ end }}
+                </td>
+                <td>{{ .JoinedAt }}</td>
+                <td>
+                    {{ if .LeftAt.Valid }}
+                        {{ .LeftAt.Time }}
+                    {{ end }}
+                </td>
             </tr>
         {{ end }}
+        </tbody>
     </table>
 
-    <h2>Games</h2>
-    <table>
+    <h4>Games</h4>
+    <table class="table table-striped table-hover table-responsive">
+        <thead>
+            <tr>
+                <th></th>
+                <th scope="col">Slug</th>
+                <th scope="col">Display Name</th>
+                <th scope="col">Created At</th>
+                <th scope="col">Deleted At</th>
+            </tr>
+        </thead>
+        <tbody>
         {{ range Model.Games }}
-        <tr>
-            <td><a href="/admin/developers/{{ Model.Developer.Slug }}/games/{{ . }}">{{ . }}</a></td>
-        </tr>
+            <tr>
+                <td class="text-center">
+                    <a type="button" class="btn btn-secondary m-1" href="/admin/developers/{{ Model.Developer.Slug }}/games/{{ .Slug }}">
+                        <i class="bi bi-person"></i>
+                    </a>
+                </td>
+                <th scope="row">{{ .Slug }}</th>
+                <td><!-- TODO --></td>
+                <td>{{ .CreatedAt }}</td>
+                <td>
+                    {{ if .DeletedAt.Valid }}
+                        {{ .DeletedAt.Time }}
+                    {{ end }}
+                </td>
+            </tr>
         {{ end }}
+        </tbody>
     </table>
 
 {{ end }}
