--- a/app/views/admin/user.jet.html
+++ b/app/views/admin/user.jet.html
@@ -1,83 +1,95 @@
 {{ if !Found }}
-    <h1>User Not Found</h1>
-    <h2>There is no user with the slug '{{ PathSlug }}'</h2>
+    <h2>User Not Found</h2>
+    <hr>
+    <h3>There is no user with the slug '{{ PathSlug }}'</h3>
 {{ else }}
-    <h1>User: {{ Model.User.Slug }}</h1>
+    <h2>User: {{ Model.User.Slug }}</h2>
+    <hr>
 
-
-    <h2>Display Names</h2>
-    <table>
+    <h4>Display Names</h4>
+    <table class="table table-striped table-hover table-responsive">
         <thead>
-        <tr>
-            <th>Display Name</th>
-            <th>Created At</th>
-            <th>Deleted At</th>
-        </tr>
+            <tr>
+                <th scope="col"></th>
+                <th scope="col">Display Name</th>
+                <th scope="col">Created At</th>
+                <th scope="col">Deleted At</th>
+            </tr>
         </thead>
-        {{ range Model.DisplayNames }}
-        <tr>
-            <td>{{ .DisplayName }}</td>
-            <td>{{ .CreatedAt }}</td>
-            <td>
-                {{ if .DeletedAt.Valid }}
-                    {{ .DeletedAt.Time }}
-                {{ end }}
-            </td>
-        </tr>
-        {{ end }}
+        <tbody>
+            {{ range Model.DisplayNames }}
+                <tr>
+                    <td></td>
+                    <td>{{ .DisplayName }}</td>
+                    <td>{{ .CreatedAt }}</td>
+                    <td>
+                        {{ if .DeletedAt.Valid }}
+                            {{ .DeletedAt.Time }}
+                        {{ end }}
+                    </td>
+                </tr>
+            {{ end }}
+        </tbody>
     </table>
 
-    <h2>Emails</h2>
-    <table>
+    <h4>Email</h4>
+    <table class="table table-striped table-hover table-responsive">
         <thead>
-        <tr>
-            <th>Email</th>
-            <th>Created At</th>
-            <th>Deleted At</th>
-            <th>Confirmed At</th>
-        </tr>
+            <tr>
+                <th scope="col"></th>
+                <th scope="col">Email</th>
+                <th scope="col">Created At</th>
+                <th scope="col">Deleted At</th>
+                <th scope="col">Confirmed At</th>
+            </tr>
         </thead>
-        {{ range Model.Emails }}
-        <tr>
-            <td>{{ .Email }}</td>
-            <td>{{ .CreatedAt }}</td>
-            <td>
-                {{ if .DeletedAt.Valid }}
-                    {{ .DeletedAt.Time }}
-                {{ end }}
-            </td>
-            <td>
-                {{ if .ConfirmedAt.Valid }}
-                    {{ .ConfirmedAt.Time }}
-                {{ end }}
-            </td>
-        </tr>
-        {{ end }}
+        <tbody>
+            {{ range Model.Emails }}
+            <tr>
+                <td></td>
+                <td>{{ .Email }}</td>
+                <td>{{ .CreatedAt }}</td>
+                <td>
+                    {{ if .DeletedAt.Valid }}
+                        {{ .DeletedAt.Time }}
+                    {{ end }}
+                </td>
+                <td>
+                    {{ if .ConfirmedAt.Valid }}
+                        {{ .ConfirmedAt.Time }}
+                    {{ end }}
+                </td>
+            </tr>
+            {{ end }}
+        </tbody>
     </table>
 
-    <h2>Developers</h2>
-    <table>
+    <h4>Developers</h4>
+    <table class="table table-striped table-hover table-responsive">
         <thead>
-        <tr>
-            <th>Name</th>
-            <th>Slug</th>
-            <th>Created At</th>
-            <th>Deleted At</th>
-        </tr>
+            <tr>
+                <th scope="col"></th>
+                <th scope="col">Name</th>
+                <th scope="col">Slug</th>
+                <th scope="col">Created At</th>
+                <th scope="col">Deleted At</th>
+            </tr>
         </thead>
-        {{ range Model.Developers }}
-        <tr>
-            <td><!-- TODO --></td>
-            <td>{{ .Slug }}</td>
-            <td>{{ .CreatedAt }}</td>
-            <td>
-                {{ if .DeletedAt.Valid }}
+        <tbody>
+            {{ range Model.Developers }}
+            <tr>
+                <td></td>
+                <td><!-- TODO --></td>
+                <td>{{ .Slug }}</td>
+                <td>{{ .CreatedAt }}</td>
+                <td>
+                    {{ if .DeletedAt.Valid }}
                     {{ .DeletedAt.Time }}
-                {{ end }}
-            </td>
-        </tr>
-        {{ end }}
+                    {{ end }}
+                </td>
+            </tr>
+            {{ end }}
+        </tbody>
     </table>
-
 
 {{ end }}
