--- a/app/views/admin/users.jet.html
+++ b/app/views/admin/users.jet.html
@@ -1,7 +1,57 @@
 <h2>Users</h2>
 <hr>
 <div class="mb-3">
-    <button type="button" class="btn btn-secondary m-1"><i class="bi bi-plus-circle"></i> Create User</button>
+    <div id="createUserModal" class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <form class="was-validated" id="createUserForm">
+                    <fieldset id="createUserFields">
+                        <div class="modal-header">
+                            <h5 class="modal-title">New User</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="mb-3">
+                                <label for="createUserEmail" class="form-label">Email address</label>
+                                <input type="email" class="form-control" id="createUserEmail" name="email" aria-describedby="emailHelp">
+                                <div id="createUserEmailHelp" class="form-text">
+                                    This is only used when resetting passwords. If not given, the password can't be reset without contacting an admin.
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="createUserDisplayName" class="form-label">Email address</label>
+                                <input type="text" class="form-control" id="createUserDisplayName" name="displayName">
+                            </div>
+                            <div class="mb-3">
+                                <input type="checkbox" class="form-check-input" id="createUserSendEmailConfCheckbox" name="sendEmailConfirmation">
+                                <label class="form-check-label" for="createUserSendEmailConfCheckbox">
+                                    Send email confirmation
+                                </label>
+                            </div>
+                            <div class="mb-3">
+                                <label for="createUserSlug" class="form-label">Slug</label>
+                                <input type="text" class="form-control" id="createUserSlug" name="slug" required aria-required="true">
+                                <div id="createUserSlugConflict" class="invalid-feedback" hidden>
+                                    This slug is already in use
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="createUserPassword" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="createUserPassword" name="password" required>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" id="createUserClose" data-bs-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary" id="createUserSubmit">Create</button>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+    </div>
+    <button type="button" class="btn btn-secondary m-1" data-bs-toggle="modal" data-bs-target="#createUserModal">
+        <i class="bi bi-plus-circle"></i> Create User
+    </button>
 </div>
 <table class="table table-striped table-hover table-responsive">
     <thead>
@@ -35,3 +85,67 @@
         {{ end }}
     </tbody>
 </table>
+
+<script type="application/javascript">
+    window.addEventListener("load", () => {
+        /**
+         *
+         * @param {Response} response
+         */
+        function handleCreateUserResponse(response) {
+            if (response.ok) {
+                window.location.href = response.headers.get("location")
+                return
+            }
+
+            if (response.status === 400) {
+                console.log(response)
+                // TODO: support problem details in form response, and display in validation
+                return
+            }
+
+            if (response.status === 409) {
+                // the slug is already in use
+                slugInput.classList.add("is-invalid")
+                slugConflict.hidden = false
+            }
+        }
+
+        function handleCreateUserError(error) {
+            console.log(error)
+            // TODO: display error
+        }
+
+        const formFields = document.getElementsByClassName("createUserFields")
+        const emailInput = document.getElementById("createUserEmail")
+        const displayNameInput = document.getElementById("createUserDisplayName")
+        const slugInput = document.getElementById("createUserSlug")
+        const slugConflict = document.getElementById("createUserSlugConflict")
+        const passwordInput = document.getElementById("createUserPassword")
+        const createUserForm = document.getElementById("createUserForm")
+        createUserForm.addEventListener("submit", async (e) => {
+            formFields.disalbed = true
+
+            slugInput.classList.remove("is-invalid")
+            slugConflict.hidden = true
+
+            try {
+                const response = await fetch(`/admin/users/${slugInput.value}`, {
+                    method: "POST",
+                    body: JSON.stringify({
+                        email: emailInput.value,
+                        displayName: displayNameInput.value,
+                        password: passwordInput.value,
+                    })
+                })
+
+                handleCreateUserResponse(response)
+            } catch (error) {
+                handleCreateUserError(error)
+            }
+
+            e.preventDefault();
+            formFields.disalbed = false
+        })
+    })
+</script>
