--- a/web/src/app.css
+++ b/web/src/app.css
@@ -1,54 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
-
 @import "tailwindcss";
-@plugin "@tailwindcss/forms";
+@import "@catppuccin/tailwindcss/mocha.css";
 
-@theme {
-    --font-sans: "Comic Sans MS", "Comic Neue", "sans-sarif";
-}
+/*catppuccin dark */
 
-:root {
-    --color: whitesmoke;
-    --body-background: #111;
-    --content-background: #111;
-    --link-color: #13b8eb;
-    --row-modifier: white;
-    --branding-background: #b0b;
-    --branding-color: #fff;
-}
+/* import fonts */
 
+/* global */
 @layer base {
-    h1 {
-        @apply text-6xl p-6;
-    }
+  html {
+    background-color: theme(--color-zinc-800);
+    color: theme(--color-ctp-red-50);
+  }
 
-    h2 {
-        @apply text-4xl p-4;
-    }
+  h1 {
+    font-size: 2rem;
+  }
 
-    h3 {
-        @apply text-2xl p-3;
-    }
+  h2 {
+    font-size: 1.5rem;
+  }
 
-    h4 {
-        @apply text-xl p-2;
-    }
+  h3 {
+    font-size: 1.17rem;
+  }
 
-    main {
-        @apply flex items-center flex-col;
-        @apply bg-[url(background.png)] bg-repeat absolute w-screen h-screen text-center;
-        @apply text-rose-200;
-    }
+  input {
+    @apply border-1 border-zinc-600 bg-zinc-700 bg-clip-border p-2 transition-colors hover:bg-zinc-800 focus:bg-zinc-800 focus:outline-0;
+  }
 
-    a {
-        @apply text-purple-400;
-    }
-
-    a:hover {
-        @apply text-purple-300;
-    }
-
-    a:active {
-        @apply text-purple-500;
-    }
+  button {
+    @apply w-fit rounded-md border-b-1 border-ctp-red-700 bg-ctp-red-500 px-2 py-1 text-zinc-900 transition-colors hover:cursor-pointer hover:bg-ctp-red-400 focus:bg-ctp-red-400 focus:outline-0;
+  }
 }
