--- a/web/src/app.css
+++ b/web/src/app.css
@@ -4,16 +4,23 @@
 /*catppuccin dark */
 
 /* import fonts */
+@font-face {
+  font-family: "nunitosans";
+  src: url("./lib/fonts/NunitoSans/NunitoSans-VariableFont_YTLC,opsz,wdth,wght.ttf")
+    format("truetype");
+}
 
 /* global */
 @layer base {
   html {
+    font-family: theme(--font-nunitosans);
     background-color: theme(--color-zinc-800);
     color: theme(--color-ctp-red-50);
   }
 
   h1 {
     font-size: 2rem;
+    color: theme(--color-ctp-red);
   }
 
   h2 {
@@ -22,7 +29,14 @@
 
   h3 {
     font-size: 1.17rem;
-    color: theme(--color-ctp-red);
+  }
+
+  img {
+    @apply h-full w-full object-cover;
+  }
+
+  hr {
+    @apply border-1 border-zinc-600;
   }
 
   input {
@@ -32,4 +46,8 @@
   .text-button {
     @apply w-fit rounded-md border-b-1 border-ctp-red-700 bg-ctp-red-500 px-2 py-1 text-zinc-900 transition-colors hover:cursor-pointer hover:bg-ctp-red-400 focus:bg-ctp-red-400 focus:outline-0;
   }
+}
+
+@theme {
+  --font-nunitosans: "nunitosans", "ui-sans-serif", "sans-serif", "system-ui";
 }
